added swagger documentation and flake file should work good with vscode now
